tests/ui/issues/issue-33941.next.stderr
error[E0271]: type mismatch resolving `<Iter<'_, _, _> as Iterator>::Item == &_`
  --> $DIR/issue-33941.rs:9:36
   |
LL |     for _ in HashMap::new().iter().cloned() {}
   |                                    ^^^^^^ types differ
   |
note: required by a bound in `cloned`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL

error[E0271]: type mismatch resolving `<Iter<'_, _, _> as Iterator>::Item == &_`
  --> $DIR/issue-33941.rs:9:14
   |
LL |     for _ in HashMap::new().iter().cloned() {}
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ types differ
   |
   = note: required for `Cloned<std::collections::hash_map::Iter<'_, _, _>>` to implement `Iterator`
   = note: required for `Cloned<std::collections::hash_map::Iter<'_, _, _>>` to implement `IntoIterator`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
